prace porzadkowe - wydzielenie osobnego modulu

--- a/ZadaniaCPP.vcxproj
+++ b/ZadaniaCPP.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="FormatowanieKolekcji.cpp" />
     <ClCompile Include="TestKolekcji.cpp" />
     <ClCompile Include="TMenu.cpp" />
+    <ClCompile Include="Zadania.cpp" />
     <ClCompile Include="ZadaniaCPP.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="FormatowanieKolekcji.h" />
     <ClInclude Include="TestKolekcji.h" />
     <ClInclude Include="TMenu.h" />
+    <ClInclude Include="Zadania.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
